Can't check there are no --add-exports as running in a 17 JVM will add these now from some source